cards fixed for mobile view but not responsive

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,6 +12,10 @@
         padding-bottom: 5vw;
     }
     @media (max-width: 640px) {
+        h1 {
+            font-size: 24vw;
+            padding-bottom: 2.5rem;
+        }
         
     }
 }
