--- a/src/components/Spotlight/Card/Card.scss
+++ b/src/components/Spotlight/Card/Card.scss
@@ -5,11 +5,15 @@
 
     // --- STYLING FOR PROJECT NAME
     p {
-        font-size: 4vw;
         font-weight: 400;
+        padding: 0.5rem 0;
+        font-size: 3.5vw;
+        text-transform: uppercase;
     }
     a {
-        font-size: 2rem;
+        font-size: 4vw;
+        display: flex;
+        align-items: center;
         color: var(--theme1-text-color);
     }
 }
